SpeedServer/ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/proxy-body-size: 1050M
    nginx.org/client-max-body-size: 1050M
spec:
  tls:
  - hosts:
    - nodespeed.forb.luas.ml
    secretName: nodespeed-forb-luas-ml-tls
  rules:
  - host: nodespeed.forb.luas.ml
    http:
      paths:
      - path: /
        backend:
          serviceName: speed-node
          servicePort: 8080
